# eComInit

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lgtm.yml  README.md
.github/: FUNDING.yml
doc/: DESIGN.md
doc/Manual/: index.rst
doc/Manual/_static/: theme_overrides.css
doc/Manual/sec-i/: what.rst
doc/Manual/sec-v/: principles.rst  workflow.rst
exception_lists/: tidy
usr/src/: .clang-format  .clang-tidy  CMakeLists.txt  README.txt
usr/src/agent/PBus-Broker/: BrokerObject.c  CMakeLists.txt  PBus-Broker.c  PBus-Broker.h
usr/src/agent/PBusBroker/: CMakeLists.txt  PBusBroker.c  PBusBroker.h
usr/src/agent/configd/: CMakeLists.txt  configd.c  configd.h  db.c  rpc.c
usr/src/agent/graphd/: CMakeLists.txt  graph.c  graphd.c  graphd.h
usr/src/agent/restartd/: CMakeLists.txt  manager.h  restartd.c  sd_notify.c  timer.c  timer.h  unit.c  unit.h
usr/src/cmake/: FindAtf-C.cmake  FindAtf.cmake  FindKqueue.cmake  FindLibkqueue.cmake  FindReadline.cmake  LemFlex.cmake  S16Atf.cmake
usr/src/cmd/PBus-Monitor/: CMakeLists.txt  PBus-Monitor.c
usr/src/cmd/s16systemd-notify/: CMakeLists.txt  notify.c
usr/src/cmd/svcadm/: CMakeLists.txt  svcadm.c  svcadm.h  svcadm.l  svcadm.y
usr/src/cmd/svccfg/: CMakeLists.txt  svccfg.c  svccfg.h  svccfg.l  svccfg.y
usr/src/cmd/svcnotify/: CMakeLists.txt  notify.c
usr/src/cmd/svcs/: CMakeLists.txt  svcs.c
usr/src/doc/Manual/: conf.py
usr/src/doc/Manual/sec-i/: prior.rst
usr/src/etc/: CMakeLists.txt
usr/src/etc/manifest/: import-services.ucl
usr/src/etc/method/: import-services
usr/src/hdr/: NOTES  s16.h  s16clnt.h  s16compat-tpl.h  s16db.h  s16db_priv.h  s16list.h  s16newrpc.h  s16note.h  s16rpc.h  s16rr.h  s16srv.h
usr/src/hdr/PBus/: PBus.h
usr/src/hdr/S16/: JSONRPCClient.h  PlatformDefinitions-tpl.h  Repository_Private.h
usr/src/java/: CMakeLists.txt
usr/src/java/lib/s16_jni/: CMakeLists.txt  s16_jni.c
usr/src/java/lib/s16j/: CMakeLists.txt
usr/src/java/lib/s16j/src/org/systemxvi/libs16/: Path.java
usr/src/lib/PBus/: CMakeLists.txt  PBus.c  PBusConnection.c  PBusObject.c  PBus_priv.h
usr/src/lib/PBus/hdr/: PBus.h
usr/src/lib/PBus/hdr/PBus/: .clang-tidy  PBus.h  PBus_Private.h
usr/src/lib/PBus/tests/: Kyuafile  pbus.c
usr/src/lib/nv/: CMakeLists.txt
usr/src/lib/s16/: CMakeLists.txt  mem.c  misc.c  s16.c
usr/src/lib/s16/db/: CMakeLists.txt  convert.c  local.c  rpc.c
usr/src/lib/s16/hdr/S16/: .clang-tidy  Core.h  JSONRPC.h  JSONRPCClient.h  JSONRPCServer.h  List.h  NVRPC.h  NVRPC_Private.h  Repository.h  Repository_Private.h  RestarterServices.h  Service.h  ServiceNotification.h
usr/src/lib/s16/newrpc/: clnt.c  newrpc_priv.h  struct.c
usr/src/lib/s16/rpc/: rpc.c
usr/src/lib/s16/rr/: process.c
usr/src/lib/s16/rr/process-tracker/: pt-driver-kevent.c  pt-driver-netlink.c  pt-driver-posix.c
usr/src/lib/s16/tests/: Kyuafile  db.c  newrpc.c
usr/src/lib/s16db/: CMakeLists.txt  convert.c  local.c  rpc.c
usr/src/lib/s16db/tests/: tests.c
usr/src/lib/s16rpc/: CMakeLists.txt
usr/src/lib/s16rr/: CMakeLists.txt  process.c
usr/src/lib/s16rr/process-tracker/: pt-driver-kevent.c  pt-driver-netlink.c  pt-driver-posix.c
usr/src/lib/s16systemd/: CMakeLists.txt
usr/src/lib/ucl/: CMakeLists.txt
usr/src/lib/uthash/: CMakeLists.txt
usr/src/share/: manifest-schema.json  s16.ksh  schema.json
usr/src/test/: a.ucl  b.ucl  c.ucl  example.ucl  testdeps.sh
usr/src/test/cxx-build/: CMakeLists.txt  test-cxx-build.cpp
usr/src/tools/: cComment.py  checkCddl.py  checkClangTidy.ksh  clang-tidy-public.tpl  fakeisatty.c  find_nonexcept.ksh  format.ksh  makeClangTidy.ksh
usr/tests/: CMakeLists.txt
usr/tests/lib/s16rpc/: CMakeLists.txt  tests.cpp
